<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/registration"
    tools:context=".fragments.RegistrationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="10dp">


        <ImageView
            android:layout_width="310dp"
            android:layout_height="210dp"
            android:layout_marginStart="19dp"
            android:src="@drawable/fresh"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="80dp"
            android:fontFamily="@font/roboto_medium_italic"
            android:text="Hello!"
            android:textColor="@color/purple"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.051"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="28dp"
            android:text="Sign Up to get started"
            android:textColor="@color/purple"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.094"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="340dp"
            android:layout_height="192dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints">


            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/background_registration"
                android:drawableStart="@drawable/ic_name"
                android:drawablePadding="10dp"
                android:paddingLeft="10dp"
                android:elevation="1.5dp"
                android:ems="10"
                android:hint="Name"
                android:inputType="textPersonName"
                android:shadowRadius="20"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.202"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <EditText
                android:id="@+id/phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_registration"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="10dp"
                android:paddingLeft="10dp"
                android:elevation="1.5dp"
                android:ems="10"
                android:hint="Phone number"
                android:inputType="number"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.202"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_registration"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:paddingLeft="10dp"
                android:elevation="1.5dp"
                android:ems="10"
                android:hint="Email address"
                android:inputType="text"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.202"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="340dp"
            android:layout_height="45dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/background_registration"
            android:elevation="1.5dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <TextView
                android:id="@+id/gender"
                android:layout_width="158dp"
                android:layout_height="65dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="Gender"
                android:textSize="15sp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/spinner"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:layout_constraintVertical_bias="0.331"
                tools:ignore="MissingConstraints" />


            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="10dp"
                android:gravity="right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.171"
                app:layout_constraintStart_toEndOf="@+id/text"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:layout_constraintVertical_bias="0.33"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/dropDownText"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_gravity="right"
                android:layout_marginTop="36dp"
                android:gravity="right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/spinner"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/spinner"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:layout_constraintVertical_bias="0.193" />


        </LinearLayout>

        <Button
            android:id="@+id/sendBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="Sign up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.467"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <ImageView
            android:layout_width="528dp"
            android:layout_height="3dp"
            android:layout_marginBottom="10dp"
            android:rotation="-45"
            android:src="@drawable/bottom_background"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            tools:layout_editor_absoluteX="-21dp"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="528dp"
            android:layout_height="3dp"
            android:layout_marginBottom="134dp"
            android:rotation="-45"
            android:src="@drawable/bottom_background"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="62dp"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>