...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/grey"
    android:layout_height="match_parent"
    android:id="@+id/profile"
    tools:context=".fragments.ProfileFragment">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="414dp"
        android:layout_height="193dp"
...
